tests/invalid/error_10.robot
// error_10: [SINTÁCTICO] Falta dos puntos en si
sensor dist;
rutina main() {
    si dist < 5
        ejecutar detener();
}
